# spatial-kde

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: pipeline.yml  python-app.yml
spatial_kde/: __init__.py  cli.py  kde.py  kernels.py  utils.py
tests/: conftest.py  test_cli.py  test_kde.py  test_kernels.py  test_utils.py
tests/data/: points.geojson  points_epsg_32630.gpkg
