[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "spatial-kde"
version = "0.2.0"
description = "Create Spatial Kernel Density / Heatmap (as a numpy array or raster) from point based vector data"
authors = ["mblackgeo <18327836+mblackgeo@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/mblackgeo/spatial-kde"
repository = "https://github.com/mblackgeo/spatial-kde"
keywords = ["raster", "vector", "kernel density", "heatmap"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.0"
geopandas = "^0.14.2"
rasterio = "^1.3.9"
Shapely = "^2.0.2"
pyproj = "^3.6.1"
numpy = "^1.26.3"
scipy = "^1.12.0"
pandarallel = "^1.6.5"
typer = "^0.9.0"

[tool.poetry.dev-dependencies]
mypy = "^1.8.0"
black = "^24.1.1"
flake8 = "^7.0.0"
typed-ast = "^1.5.5"
pylint = "^3.0.3"
pytest = "^8.0.0"
coverage = {extras = ["toml"], version = "^6.3"}
pytest-cov = "^4.1.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
skde = "spatial_kde.cli:app"

[tool.coverage.paths]
source = ["spatial_kde"]

[tool.coverage.run]
branch = true
source = ["spatial_kde"]

[tool.coverage.report]
show_missing = true
# fail_under = 100

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["spatial_kde"]

# [tool.pytest.ini_options]
# testpaths = "tests"
# addopts = [
#     "--cov", "spatial_kde",
#     "--cov-report", "term-missing:skip-covered",
#     "-p", "no:warnings"
# ]
